Definição de cor base para background

--- a/style.css
+++ b/style.css
@@ -5,3 +5,7 @@
 #perfil {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+
+body {
+    background-color:#ffd60a;
+}
