--- a/style.css
+++ b/style.css
@@ -9,3 +9,15 @@
 body {
     background-color:#ffd60a;
 }
+
+#resid {
+    background-color: green;
+    font-weight: bold;
+    color: white;
+}
+
+#nac {
+    background-color: blue;
+    font-weight: bold;
+    color: white;
+}
