--- a/style.css
+++ b/style.css
@@ -21,3 +21,19 @@ body {
     font-weight: bold;
     color: white;
 }
+
+.hab1 {
+    font-size: small;
+}
+
+.hab2 {
+    font-size: medium;   
+}
+
+.hab3 {
+    font-size: large;
+}
+
+.hab4 {
+    font-size: larger;
+}
